# mdcx-diy

./: .gitignore  .pre-commit-config.yaml  CODE_WIKI.md  COMPLETE_FEATURES.md  DEVELOPMENT.md  FAQ.md  INSTALL.md  README.md  SCENARIOS.md  SCRAPING_MODES.md  USER_GUIDE.md  actor_database.xlsx  actor_mapping_fixed.xml  amazon_database.py  changelog.md  javbus_actress_extension.py  main.py  pyproject.toml  test_graphis_structure.py  test_javbus_actress.py  test_javbus_implementation.py  test_javbus_standalone.py
.githooks/: pre-push
.github/workflows/: build-windows.yml  ci.yaml  release.yml  warm-cache.yml
.monkeycode/: MEMORY.md
docs/: CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_GUIDE.md  CODE_REVIEW_STANDARDS.md  CODE_WIKI.md  COMPLETE_FEATURES.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  FAQ.md  FEATURES.md  INSTALL.md  QUICKSTART.md  README.md  SCENARIOS.md  SCRAPING_MODES.md  TEST_COVERAGE_SUMMARY.md  USER_GUIDE.md  amazon-cache.md  api-documentation.md  architecture.md  changelog.md  configuration.md  core-modules.md  crawler-migration.md  crawler-system.md  data-models.md  dependencies.md  naming-system.md  pyqt6-migration.md  tmdb-cache.md  todo.md  tools.md
mdcx/: consts.py  llm.py  manual.py  network_fingerprint.py  number.py  signals.py  web_async.py
mdcx/base/: file.py  image.py  translate.py  video.py  web.py
mdcx/cf_bypass/: __init__.py  local_server.py
mdcx/cmd/: crawl.py
mdcx/config/: computed.py  enums.py  manager.py  migrations.py  models.py  resources.py  v1.py
mdcx/core/: amazon.py  amazon_database.py  file.py  file_crawler.py  image.py  media_resource.py  network_check.py  nfo.py  scraper.py  tag_priority.py  tmdb_actor.py  translate.py  utils.py  web.py
mdcx/crawlers/: __init__.py  airav_cc.py  avbase_new.py  avsex.py  avsox.py  cableav.py  cnmdb.py  dahlia.py  dmm_api.py  faleno.py  fantastica.py  fc2.py  fc2club.py  fc2hub.py  fc2ppvdb.py  freejavbt.py  getchu.py  getchu_dl.py  giga.py  hdouban.py  hscangku.py  iqqtv.py  jav321.py  javbus.py  javday.py  javdb_api.py  javdb_app.py  javdb_new.py  javdbapi.py  javlibrary.py  kin8.py  libredmm.py  love6.py  lulubar.py  madouqu.py  mdtv.py  mgstage.py  missav.py  missav_api.py  mmtv.py  (+7 more)
mdcx/models/: flags.py  log_buffer.py  types.py
mdcx/tools/: emby_actor_image.py  emby_actor_info.py  minnano_crawler.py  missing.py  sync_gfriends.py  wiki.py
mdcx/utils/: __init__.py  file.py  path.py  rate_limit.py  video.py  xml.py
scripts/: QUICK_START.md  TMDB_VERIFIER_README.md  build.py  changelog.py  check.py  fix_qt_enums.py  install_git_hooks.py  pyuic.sh  verify_actor_cli.py  verify_actor_tmdb.py  verify_actor_tmdb_gui.py  verify_simple.py  warm_cache.py
tests/: conftest.py  test_actor_stop.py  test_amazon_database.py  test_base_web.py  test_build.py  test_config_conversion.py  test_config_network.py  test_jellyfin_actor_api.py  test_mapping_resources.py  test_network_check.py  test_network_fingerprint.py  test_network_lifecycle.py  test_nfo_actor_tmdbid.py  test_nfo_read.py  test_regression_fixes.py  test_scraper_image_download.py  test_scraper_remain_list.py  test_tmdb_actor.py  test_web_amazon_data.py  test_web_async_cf_bypass.py  test_web_async_limiter.py  test_website_single_options.py
userdata/: amazon_asin_database.xlsx
(+38 files in other folders)
