[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mdcx*", "scripts*"]

[project]
name = "mdcx"
version = "2.0.0"
description = "mdcx"
readme = "README.md"
requires-python = ">=3.13.4" # we need os.path.ALLOW_MISSING and type parameter defaults
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp>=3.10.0",
    "aiolimiter==1.2.1",
    "av>=15.0.0",
    "beautifulsoup4==4.13.4",
    "curl-cffi==0.11.4",
    "httpx[socks]>=0.28.1",
    "lxml>=6.1.0",  # GHSA-vfmq-68hx-4jfw (CVE-2026-41066) XXE 修复; 需用 defusedxml 解析不可信 XML
    "openai==1.91.0",
    "oshash==0.1.1",
    "parsel>=1.10.0",
    "pillow>=12.2.0",  # GHSA-pwv6-vv43-88gr / whj4-6x5x-4v2j / cfh3-3jmp-rvhc / r73j-pqj5-w3x7 等 12 条告警; 处理不可信封面/缩略图
    "ping3==4.0.4",
    "pydantic-settings>=2.14.2",  # GHSA-4xgf-cpjx-pc3j 符号链接越权读 secrets
    "pyqt6==6.11.0",
    "zhconv==1.4.3",
    "opencv-contrib-python-headless==4.13.0.92",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.0",
    "defusedxml>=0.7.1",
    # --- CF Bypass 服务依赖 (release 打包时必须随包装入) ---
    # cf_bypasser 不在 PyPI, 用上游 git 依赖并固定 commit 以保证 CI 可复现。
    "cloakbrowser",
    "uvicorn>=0.15.0",
    "fastapi>=0.68.0",
    "CloudflareBypassForScraping @ git+https://github.com/Hazard804/CloudflareBypassForScraping.git@2f440849d9cf79fbf4b549fac5bbebd42adb17ea",
]

[project.scripts]
crawl = "mdcx.cmd.crawl:app"
gen_enums = "mdcx.cmd.gen_enums:main"
build = "scripts.build:main"
bump = "scripts.bump:app"
changelog = "scripts.changelog:app"
check = "scripts.check:main"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "numpy>=2.4.3",
    "opencv-contrib-python-headless>=4.13.0.92",
    "pre-commit>=4.2.0",
    "pyinstaller>=6.14.2",
    # 构建期用于下载并随包打入 CF Bypass 所需的 Chromium (CI 中通过 PLAYWRIGHT_BROWSERS_PATH 指定缓存位置)
    "playwright>=1.40.0",
    "pyright>=1.1.400",
    "pytest>=9.0.3",  # GHSA-6w46-j5rx-g56g tmpdir 处理漏洞 (dev)
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "rich>=14.1.0",
    "ruff>=0.15.0,<0.16.0",
    "typer>=0.16.0",
    "types-lxml>=2025.3.30",
]

[tool.uv]
package = true
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.pyright]
typeCheckingMode = "off"
include = ["mdcx"]
exclude = [
    "**/__pycache__",
    "mdcx/controllers/main_window/init.py",
    "mdcx/controllers/main_window/load_config.py",
    "mdcx/views",
    "mdcx/gen",
]
pythonVersion = "3.13"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUntypedFunctionDecorator = "none"
reportMissingParameterType = "warning"
reportGeneralTypeIssues = "warning"
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportPrivateUsage = "none"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportUnusedImport = "warning"
